# former_robot

./: .gitignore  README.md  TOPICS.md  requirement.rosinstall
docs/: former_inertia.ods
former_auto_docking/: CMakeLists.txt  package.xml
former_auto_docking/include/former_auto_docking/: line.h  line_extraction.h  utilities.h  visibility_control.h
former_auto_docking/src/: line.cpp  line_extraction.cpp  main_node.cpp
former_bringup/: CMakeLists.txt  README.md  package.xml  view_robot.rviz
former_bringup/config/: controllers_former.yaml  controllers_former_gazebo.yaml  ekf.yaml  ps5.config.yaml
former_bringup/launch/: bringup_robot.launch.py  bringup_robot_gazebo.launch.py  bringup_simulator.launch
former_bringup/scripts/: 99-former-devices.rules  former_bringup.service
former_controllers/: CMakeLists.txt  controller_plugins.xml  package.xml
former_controllers/include/former_controllers/: gpio_controller.hpp
former_controllers/src/: gpio_controller.cpp
former_description/: CMakeLists.txt  README.md  package.xml  view_robot.rviz
former_description/launch/: upload_robot.launch  upload_robot.launch.py  view_robot.launch  view_robot.launch.py
former_description/meshes/collision/: base_link.stl  caster_mount.stl  caster_rotate.stl  caster_wheel.stl  imu.stl  main_wheel.stl  main_wheel_mount.stl  main_wheel_suspension.stl  sick_tim5_lidar.stl  sonar_sensor.stl
former_description/meshes/visual/: caster_mount.dae  caster_rotate.dae  caster_wheel.dae  imu.dae  lamp_assy.dae  main_wheel_mount.dae  main_wheel_suspension.dae  sonar_sensor.dae
former_description/rviz/: view_robot.rviz
former_description/urdf/: former.urdf.xacro  former_gazebo.urdf.xacro  former_ros2_control.urdf.xacro  robot.sdf  robot.urdf  robot.urdf.xacro
former_gazebo/: CMakeLists.txt  README.md  package.xml
former_gazebo/blender/: charging_station.blend  office_building.blend  simple_building.blend  simple_building.blend1
former_gazebo/launch/: bringup.launch.py  bringup_gazebo.launch  bringup_gazebo.launch.py  spawn_robot.launch
former_gazebo/models/charging_station/: model.config  model.sdf
former_gazebo/models/charging_station/meshes/: charging_station.dae  charging_station.stl
former_gazebo/models/office_building/: model.config  model.sdf
former_gazebo/models/office_building/meshes/: office_building.dae
former_gazebo/worlds/: default.sdf  empty.world  empty_world.world  office_building.sdf  office_building.world  simple_building.sdf
former_gazebo/worlds/meshes/: office_building.dae  simple_building.dae  simple_building.stl
former_gpio_board/: CMakeLists.txt  package.xml
former_gpio_board/src/: main_node.cpp
former_hardware_interface/: CMakeLists.txt  former_hardware_interface.xml  package.xml
former_hardware_interface/include/former_hardware_interface/: former_hardware_interface.hpp  visibility_control.h
former_hardware_interface/src/: former_hardware_interface.cpp
former_interfaces/: CMakeLists.txt  package.xml
former_interfaces/action/: Docking.action
former_interfaces/msg/: RobotFeedback.msg
former_interfaces/srv/: SetLamp.srv
former_nav2/: CMakeLists.txt  package.xml
former_nav2/launch/: map_building.launch.py
former_navigation2/: CMakeLists.txt  README.md  package.xml
former_navigation2/config/: mapper_params.yaml
former_navigation2/launch/: bringup_launch.py  map_building.launch.py  navigation_launch.py
former_navigation2/maps/: map_office_building.pgm  map_office_building.yaml  roas_office1.pgm  roas_office1.yaml  roas_office2.pgm  roas_office2.yaml
former_navigation2/params/: nav2_params.yaml
former_navigation2/rviz/: map_building.rviz
former_ros_control/: CMakeLists.txt  package.xml
former_ros_control/config/: controllers.yaml
former_ros_control/launch/: bringup_controllers.launch
former_ros_control/src/: move_to_node.cpp
