<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>former_bringup</name>
  <version>0.0.1</version>
  <description>The former_bringup package</description>
  <maintainer email="byeongkyu@gmail.com">byeongkyu</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>rviz_imu_plugin</depend>
  <depend>robot_localization</depend>
  <depend>imu_xg6000_ros2</depend>
  <depend>realsense2_camera</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
