<?xml version="1.0"?>
<package format="2">
  <name>former_description</name>
  <version>0.0.0</version>
  <description>The former_description package</description>

  <maintainer email="bkahn@roas.co.kr">byeongkyu</maintainer>
  <license>BSD</license>
  <url type="website">http://roas.co.kr</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>realsense2_description</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
