<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>former_gazebo</name>
  <version>0.0.0</version>
  <description>The former_gazebo package</description>
  <maintainer email="bkahn@roas.co.kr">byeongkyu</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>former_description</depend>
  <depend>ign_ros2_control</depend>
  <depend>ros_gz</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
